kustomize/base/service.yml
kind: Service
apiVersion: v1
metadata:
  name: go-kube
spec:
  selector:
    app: go-kube
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
