kustomize/base/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-hey-kube
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-hey-kube
  template:
    metadata:
      labels:
        app: go-hey-kube
    spec:
      containers:
        - name: go-hey-kube
          image: euiko/go-hey-kube:1.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources: {}
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /readiness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 1

---
apiVersion: v1
kind: Service
metadata:
  name: go-hey-kube-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: go-hey-kube

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hey-kube.mlg-dev.local
  name: hey-kube-ingress
spec:
  rules:
    - host: hey-kube.mlg-dev.local
      http:
        paths:
          - backend:
              serviceName: go-hey-kube-service
              servicePort: 80
